# wiki-generator

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  codeql.yml  fmt.yml  release.yml  test.yml
ci/: deploy.sh
example/: wiki.toml
example/src/: index.md
src/: config.rs  lib.rs  main.rs
src/config/: config.rs
src/public/: index.hbs  mod.rs  redirect.hbs
src/public/css/: content.css  style.css  variable.css
src/public/js/: wiki.js
src/renderer/: context.rs  markdown.rs  mod.rs  post_render.rs  postprocess.rs  render.rs  render_markdown.rs
src/themes/: index.hbs  mod.rs
src/util/: mod.rs  path.rs  string.rs
src/wiki/: file.rs  mod.rs  page.rs  wiki.rs
