[package]
name = "wiki-generator"
version = "0.2.4"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
futures = "0.3.15"
handlebars = "3"
pulldown-cmark = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rocket = { version = "0.4", optional = true }
rocket_contrib = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.5"
tokio = { version = "1.5", features = ["macros"] }
toml = "0.5"
url = "2.2"
urlencoding = "1.3.3"
walkdir = "2"

[features]
default = ["build"]
build = []
serve = ["rocket", "rocket_contrib"]